<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_alignParentTop="true"
    android:id="@+id/formattingToolbar"
    android:scrollbarSize="2dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <CheckedTextView
            android:id="@+id/bold"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:gravity="center"
            android:onClick="toggleFormat"
            android:background="@drawable/toggle_selector"
            android:text="@string/bold"/>
        <CheckedTextView
            android:id="@+id/italic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:onClick="toggleFormat"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/italic"/>
        <CheckedTextView
            android:id="@+id/underline"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:gravity="center"
            android:onClick="toggleFormat"
            android:background="@drawable/toggle_selector"
            android:text="@string/underline"/>
        <CheckedTextView
            android:id="@+id/strikeThru"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="toggleFormat"
            android:textSize="22sp"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/strike_through"/>
        <CheckedTextView
            android:id="@+id/header1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:onClick="toggleFormat"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/header1"/>
        <CheckedTextView
            android:id="@+id/header2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/header2"/>
        <CheckedTextView
            android:id="@+id/header3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/header3"/>
        <CheckedTextView
            android:id="@+id/quote"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:onClick="toggleFormat"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/quotes"/>
        <CheckedTextView
            android:id="@+id/code"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:gravity="center"
            android:onClick="toggleFormat"
            android:background="@drawable/toggle_selector"
            android:text="@string/code"/>
        <CheckedTextView
            android:id="@+id/unorderedlist"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/unordered_list"/>
        <CheckedTextView
            android:id="@+id/orderedList"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/ordered_list"/>
        <CheckedTextView
            android:id="@+id/link"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:onClick="toggleFormat"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/link"/>
        <CheckedTextView
            android:id="@+id/horizontalRule"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:onClick="toggleFormat"
            android:gravity="center"
            android:background="@drawable/toggle_selector"
            android:text="@string/horizontal_rule"/>

    </LinearLayout>

</HorizontalScrollView>